--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  percent_indicator: ^4.2.2
   provider: ^6.1.4
   hive_flutter: ^1.1.0
   hive: ^2.2.3
