--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "commentTranslate.hover.enabled": false
+    "commentTranslate.hover.enabled": false,
+    "cmake.sourceDirectory": "D:/workout-tracker-pro-main/workout-tracker-pro-main/linux"
 }
