--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,21 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  # Remove flutter_local_notifications
+  url_launcher: ^6.0.0 
   percent_indicator: ^4.2.2
   provider: ^6.1.4
-  hive_flutter: ^1.1.0
+  hive_flutter:
+  flutter_local_notifications:
   hive: ^2.2.3
   fl_chart: ^0.70.2
-  flutter_local_notifications: ^19.0.0
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   uuid: ^4.5.1
   path_provider: ^2.1.5
   flutter_launcher_icons: ^0.14.3
   flutter_timezone: ^4.1.0
+  timezone: ^0.9.2
   # Removed date_utils due to null safety and version conflict
 
 dev_dependencies:
