--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_timezone: ^4.1.0
   timezone: ^0.9.2
   # Removed date_utils due to null safety and version conflict
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
