--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   timezone: ^0.9.2
   # Removed date_utils due to null safety and version conflict
   share_plus: ^7.2.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
