--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,41 +1,35 @@
 name: workout_tracker
-description: "A new Flutter project."
+description: A productivity-focused workout tracking app.
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  # Remove flutter_local_notifications
-  url_launcher: ^6.0.0 
-  percent_indicator: ^4.2.2
-  provider: ^6.1.4
-  hive_flutter:
-  flutter_local_notifications:
+  cupertino_icons: ^1.0.6
+  provider: ^6.1.1
   hive: ^2.2.3
-  fl_chart: ^0.70.2
-  intl: ^0.20.2
-  shared_preferences: ^2.5.3
-  uuid: ^4.5.1
-  path_provider: ^2.1.5
-  flutter_launcher_icons: ^0.14.3
-  flutter_timezone: ^4.1.0
-  timezone: ^0.9.2
-  # Removed date_utils due to null safety and version conflict
-  share_plus: ^7.2.1
-  permission_handler: ^12.0.0+1
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
+  permission_handler: ^11.0.1
+  flutter_local_notifications: ^16.3.0
+  uuid: ^4.2.2
+  screen_brightness: ^0.2.2
+  intl: ^0.18.1
+  fl_chart: ^0.65.0
+  shared_preferences: ^2.2.2
+  percent_indicator: ^4.2.3
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.6
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
   hive_generator: ^2.0.1
-  flutter_lints: ^2.0.0
-  # Removed date_utils from dev_dependencies as well
 
 flutter:
   uses-material-design: true
