feat: major update with new features and improvements - 2025-05-20
- Added new profile feature with user management
- Implemented rest timer functionality
- Enhanced analytics with new streak tracking
- Updated UI themes and styling
- Improved workout tracking and logging
- Added new dashboard widgets
- Fixed various bugs and improved performance

--- a/.coderabbit/config.yml
+++ b/.coderabbit/config.yml
@@ -2,4 +2,4 @@ enablePRComments: true
 enableCommitComments: true
 enablePRDescriptions: true
 enableAutoReview: true
-model: gpt-4-turbo-preview
+model: claude-3.7-sonnet
