--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,15 @@ dependencies:
   hive_flutter:
   flutter_local_notifications:
   hive: ^2.2.3
+  audioplayers: ^5.2.1
   fl_chart: ^0.70.2
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   uuid: ^4.5.1
   path_provider: ^2.1.5
+  image_picker: ^1.0.7
+  excel: ^4.0.6
+  path: ^1.8.3
   flutter_launcher_icons: ^0.14.3
   flutter_timezone: ^4.1.0
   timezone: ^0.9.2
@@ -42,6 +46,7 @@ flutter:
   assets:
     - assets/images/
     - assets/
+    - assets/audio/
 
 flutter_launcher_icons:
   android: "launcher_icon"
