--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  activity_ring: ^0.3.0 # Added 2025-05-23: For Apple Watch-style progress rings
   cupertino_icons: ^1.0.8
   # Remove flutter_local_notifications
   url_launcher: ^6.0.0 
+  flutter_staggered_animations:  # Use the latest version
+  shimmer: 
   percent_indicator: ^4.2.2
   provider: ^6.1.4
   hive_flutter:
@@ -32,6 +35,8 @@ dependencies:
   # Removed date_utils due to null safety and version conflict
   share_plus: ^7.2.1
   permission_handler: ^12.0.0+1
+  file_picker: ^8.0.0
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -45,11 +50,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/
+    - assets/animation/
     - assets/audio/
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/app_logo.png"
-
