--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   uuid: ^4.5.1
+  collection: ^1.18.0 # Added 2025-05-30 for list/collection utilities
   path_provider: ^2.1.5
   image_picker: ^1.0.7
   excel: ^4.0.6
@@ -52,8 +53,10 @@ flutter:
     - assets/images/
     - assets/animation/
     - assets/audio/
+    - assets/app_logo.jpg
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "assets/app_logo.png"
+  image_path: "assets/app_logo.jpg" # Or your custom path
+  # ... other configurations
